# flowmind

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  rc-staging.yml
apps/ai-service/: package.json  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/: classify.py  evaluate.py  extract.py  summarize.py
apps/ai-service/app/core/: config.py  logging.py  metrics.py  security.py  trace.py
apps/ai-service/app/providers/: anthropic_provider.py  base.py  errors.py  fake_provider.py  openai_provider.py  registry.py
apps/ai-service/app/schemas/: classify.py  common.py  extract.py  summarize.py
apps/ai-service/app/services/: llm_service.py
apps/ai-service/tests/: test_ai_service.py  test_ai_service_openai.py  test_openai_provider.py
apps/api/: jest.config.ts  package.json
apps/web/: next.config.ts  package.json  playwright.config.ts  playwright.staging.config.ts  runtime-config.d.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/worker/: jest.config.ts  package.json  tsconfig.json
docs/: api.md  architecture.md  connections.md  expressions.md  flow-control.md  observability.md  production-runbook.md  rc1-go-no-go.md  rc1-staging-release-runbook.md  reliability-semantics.md  run-history-retention.md  security-audit-rc1.md  security.md  testing.md  workflow-debugger.md
docs/adr/: 0001-monorepo.md  0002-api-worker-ai-boundaries.md  (+3 more)
scripts/: run-chaos-rc1.sh  run-production-compose-smoke.sh
(+450 files in other folders)
