[project]
name = "automation-ai-service"
version = "0.1.0"
description = "AI service for workflow automation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
